--- a/wiki/lhDev.wiki
+++ b/wiki/lhDev.wiki
@@ -3,9 +3,11 @@
 
 = Introduction =
 
-lh-dev is a VimL for plugin oriented toward coding. It provides language independent functions that can be used by these plugins. The functions themselves can be specialized on a filetype basis.
+lh-dev is a VimL for plugins oriented toward coding. It provides language independent functions that can be used by these plugins. The functions themselves can be specialized on a filetype basis.
 
 I'll first present options that end-user of plugins based on lh-dev may tune, then the API itself for coding plugin authors.
+
+<wiki:toc max_depth="3" />
 
 = Commands =
 
@@ -42,23 +44,23 @@ It is done, respectively, with the [lhDev#Options options]:
 
 Once in the _main name_ form, the `..._re` regex options match the _main name_ while the `..._subst` replacement text is applied instead.
 
-You can find examples for these option in mu-template [http://lh-vim.googlecode.com/svn/mu-template/trunk/after/template/vim/internals/vim-rc-local-cpp-style.template template] used by [BTW BuildToolsWrapper]'s `:BTW new_project` command.
+You can find examples for these options in mu-template [http://lh-vim.googlecode.com/svn/mu-template/trunk/after/template/vim/internals/vim-rc-local-cpp-style.template template] used by [BTW BuildToolsWrapper]'s `:BTW new_project` command.
 
 === Formatting of brackets characters ===
 
 The aim of `:AddStyle` (and of `lh#dev#style#get()` and `lh#dev#style#apply()`) is to define how things should get written in source code.
 
-For instance, some projects will want to have opening curly-brackets on new lines (see Allman indenting style), other will prefer to have the opening bracket on the same line as the function/constrol-statement/... (see K&R indenting style, Java coding style, ...)
+For instance, some projects will want to have open curly-brackets on new lines (see Allman indenting style), other will prefer to have the open bracket on the same line as the function/control-statement/... (see K&R indenting style, Java coding style, ...)
 
 lh-dev doesn't do any replacement by itself. It is expected to used by
 snippet plugins. So far, only [muTemplate mu-template] and [lhCpp lh-cpp] exploit this feature.
 
-`:AddStyle` is meant to be used by end users -- while `lh#dev#style#get()` and `lh#dev#style#apply()` are meant to be used by plugin developpers that want to exploit end-user coding style. 
+`:AddStyle` is meant to be used by end users -- while `lh#dev#style#get()` and `lh#dev#style#apply()` are meant to be used by plugin developers that want to exploit end-user coding style. 
 
 
 `:AddStyle {key} [-buffer] [-ft[={ft}]] {Replacement}`
   * `{key}` is a regex that will get replaced automatically (by plugins supporting this API)
-  * `{replacement}` is what will be inserted in place of `{text}`
+  * `{replacement}` is what will be inserted in place of `{key}`
   * "`-buffer`" defines this association only for the current buffer. This option is meant to be used with plugins like [https://github.com/LucHermitte/local_vimrc local_vimrc].
   * "`-ft[={ft}]`" defines this association only for the specified filetype. When `{ft}` is not specified, it applies only to the current filetype. This option is meant to be used in .vimrc, in the global zone of |filetype-plugin|s or possibily in [https://github.com/LucHermitte/local_vimrc local_vimrcs] (when combined with "`-buffer`").
 
@@ -104,7 +106,15 @@ specialized configuration (with "`-ft`").
 
 == Inherited filetypes ==
 
-`g:{ft}_inherits = 'ft1,ft2,...'`
+All the options available though lh-dev and its API (`lh#dev#get#option()`) can be specialized for each filetype. Doing so for every filetype will quickly become cumbersome when these filetypes have a lot in common like C and C++. To simplify options tuning, lh-dev supports filetype inheritance.
+
+By default, C++ option settings inherits C option settings. In future versions, Java option settings may also inherit C or C++ option settings.
+
+If you want to define new inheritance relations between filetypes, send me an email for me to add to it to the default configuration, or do so in your `.vimrc` with 
+
+{{{
+:let `g:{ft}_inherits = 'ft1,ft2,...'`
+}}}
 
 = API =
 
